# Crzgames_Launcher

./: README.md  exemple_updater.json  index.html  package-lock.json  package.json  test.json  tsconfig.json  vite.config.ts.timestamp-1670978635872.mjs
.github/workflows/: github-actions-build_publish_release.yml  github-actions-build_release.yml  github-actions-publish.yml  github-actions-publish_release.yml  github-actions-test_build.yml  github-actions-uploading_artifacts.yml  github-actions-uploading_release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/scss/: poppins-fonts.scss  style.scss
src/components/: WindowBar.vue
src/components/BaliseSemantique/: Footer.vue  Header.vue  Nav.vue
src/router/: index.ts
src/stores/: TestStore.ts
src/views/: Index.vue  IndexView.vue  Test.vue
